LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Configuration__c/fields/zoom_app__Authenticate_via_Salesforce_Username__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Authenticate_via_Salesforce_Username__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authenticate_via_Salesforce_Username</label>
    <type>Checkbox</type>
</CustomField>