LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Configuration__c/fields/zoom_app__Enable_Editable_Contact_Lead__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Enable_Editable_Contact_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Editable Contact/Lead</label>
    <type>Checkbox</type>
</CustomField>