LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Configuration__c/fields/zoom_app__Enable_HVS__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Enable_HVS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Supported only in Lightning Experience</inlineHelpText>
    <label>Enable HVS</label>
    <type>Checkbox</type>
</CustomField>