LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Configuration__c/fields/zoom_app__Phone_Auto_Save_SMS__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Phone_Auto_Save_SMS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Phone Auto Save SMS</label>
    <type>Checkbox</type>
</CustomField>