LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Configuration__c/fields/zoom_app__Turn_Off_Internal_Call__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Turn_Off_Internal_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn Off Internal Call</label>
    <type>Checkbox</type>
</CustomField>